[package]
name = "rsincron"
authors = ["Mattia Repetto <mfwre-gh@proton.me>"]
version = "0.0.10"
edition = "2021"
repository = "https://github.com/mfwre/rsincron"
homepage = "https://github.com/mfwre/rsincron"
documentation = "https://github.com/mfwre/rsincron"
license = "GPL-3.0-or-later"
description = "Rust rewrite of the incredibly useful but abandoned incron software"
readme = "README.md"
keywords = ["incron"]

[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.11", features = ["derive", "string"] }
figment = { version = "0.10.8", features = ["toml"] }
inotify = "0.10.1"
serde = { version = "1.0.171", features = ["derive"] }
shell-words = "1.1.0"
thiserror = "1.0.51"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.3.0", features = ["v4"] }
walkdir = "2.3.3"
winnow = "0.5.25"
xdg = "2.4.1"

[dev-dependencies]
tempfile = "3.9.0"


[[bin]]
name = "rsincrontab"

[[bin]]
name = "rsincrond"

[lib]
name = "rsincronlib"
