[package]
name = "rsincron"
authors = ["Mattia Repetto <mfwre-gh@proton.me>"]
version = "0.0.10"
edition = "2021"
repository = "https://github.com/mfwre/rsincron"
homepage = "https://github.com/mfwre/rsincron"
documentation = "https://github.com/mfwre/rsincron"
license = "GPL-3.0-or-later"
description = "Rust rewrite of the incredibly useful but abandoned incron software"
readme = "README.md"
keywords = ["incron"]

[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.11", features = ["derive", "string"] }
figment = { version = "0.10.8", features = ["toml"] }
futures = "0.3.30"
inotify = "0.10.1"
lazy_static = "1.4.0"
serde = { version = "1.0.171", features = ["derive"] }
shell-words = "1.1.0"
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4"] }
winnow = "0.5.25"
xdg = "2.4.1"

[lib]
name = "rsincronlib"
